--- a/src/views/Index/index.html
+++ b/src/views/Index/index.html
@@ -3,7 +3,11 @@
     <div class="col">
       <div class="d-flex flex-column align-items-center">
         <h1 class="page-title mb-4"><strong>Hello, World!</strong></h1>
-        <img src="/src/images/logo.png" alt="Logo" width="176" />
+        <img
+          src="<%= require('/src/images/logo.png') %>"
+          alt="Logo"
+          width="176"
+        />
       </div>
     </div>
   </div>
